:art: Created Layout cats screen

--- a/catsApp/app/src/main/res/layout/fragment_cats.xml
+++ b/catsApp/app/src/main/res/layout/fragment_cats.xml
@@ -17,7 +17,7 @@
         app:layout_constraintBottom_toBottomOf="parent"/>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewSurvey"
+        android:id="@+id/rvCats"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
