--- a/catsApp/app/src/main/res/layout/cats_item_view.xml
+++ b/catsApp/app/src/main/res/layout/cats_item_view.xml
@@ -7,13 +7,14 @@
     android:layout_margin="16dp">
 
     <ImageView
-        android:id="@+id/imageViewSurveyImage"
+        android:id="@+id/imageViewCatImage"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:scaleType="matrix"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/app_name"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
